--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-      "magento/framework": "102.0.0"
+      "magento/framework": "^102.0.0"
     },
     "autoload": {
         "files": [
